SAN-23: Update penalty details